# toml-fmt-py-common

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.toml
.github/: FUNDING.yml
.github/workflows/: check.yaml  release.yaml
src/toml_fmt_common/: __init__.py
tests/: test_app.py
